[gd_scene load_steps=13 format=3 uid="uid://dfwikv18bu8is"]

[ext_resource type="Script" uid="uid://be1olesoifdi2" path="res://scenes/assembly_system/scripts/assembly_machine.gd" id="1_lc1mj"]
[ext_resource type="Script" uid="uid://djkopft4nqjol" path="res://scenes/assembly_system/scripts/button.gd" id="2_i5rei"]
[ext_resource type="PackedScene" uid="uid://d2xt5dfs2dviv" path="res://scenes/assembly_system/packaged_burger.tscn" id="2_xhpuh"]

[sub_resource type="BoxMesh" id="BoxMesh_6xei1"]
size = Vector3(2.41, 1, 1)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_lc1mj"]
points = PackedVector3Array(1.205, 0.5, 0.5, 1.205, 0.5, -0.5, -1.205, 0.5, 0.5, 1.205, -0.5, 0.5, 1.205, -0.5, -0.5, -1.205, 0.5, -0.5, -1.205, -0.5, 0.5, -1.205, -0.5, -0.5)

[sub_resource type="BoxMesh" id="BoxMesh_lc1mj"]
size = Vector3(1, 0.255, 1)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_i5rei"]
points = PackedVector3Array(-0.5, -0.1275, -0.5, -0.5, 0.1275, -0.5, 0.5, -0.1275, -0.5, -0.5, -0.1275, 0.5, -0.5, 0.1275, 0.5, 0.5, 0.1275, -0.5, 0.5, -0.1275, 0.5, 0.5, 0.1275, 0.5)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_xhpuh"]
points = PackedVector3Array(-0.5, -0.1275, -0.5, -0.5, 0.1275, -0.5, 0.5, -0.1275, -0.5, -0.5, -0.1275, 0.5, -0.5, 0.1275, 0.5, 0.5, 0.1275, -0.5, 0.5, -0.1275, 0.5, 0.5, 0.1275, 0.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_lc1mj"]

[sub_resource type="CylinderMesh" id="CylinderMesh_lc1mj"]
top_radius = 0.2
bottom_radius = 0.2
height = 0.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_lc1mj"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_vdn38"]
points = PackedVector3Array(-0.2, -0.25, 0, -0.1990603, -0.25, -0.01961629, -0.1990603, -0.25, 0.01957713, -0.2, 0.25, 0, -0.19616288, -0.25, -0.03903681, -0.1990603, 0.25, -0.01961629, -0.19616288, -0.25, 0.03899765, -0.1990603, 0.25, 0.01957713, -0.19142522, -0.25, -0.058065787, -0.19616288, 0.25, -0.03903681, -0.19142522, -0.25, 0.058026627, -0.19616288, 0.25, 0.03899765, -0.18480815, -0.25, -0.0765466, -0.19142522, 0.25, -0.058065787, -0.18480815, -0.25, 0.076507434, -0.19142522, 0.25, 0.058026627, -0.17638998, -0.25, -0.094283484, -0.18480815, 0.25, -0.0765466, -0.17638998, -0.25, 0.094244316, -0.18480815, 0.25, 0.076507434, -0.16632733, -0.25, -0.111119814, -0.17638998, 0.25, -0.094283484, -0.16632733, -0.25, 0.11108066, -0.17638998, 0.25, 0.094244316, -0.1546202, -0.25, -0.12689899, -0.16632733, 0.25, -0.111119814, -0.1546202, -0.25, 0.12685983, -0.16632733, 0.25, 0.11108066, -0.14142522, -0.25, -0.14142522, -0.1546202, 0.25, -0.12689899, -0.14142522, -0.25, 0.14138605, -0.1546202, 0.25, 0.12685983, -0.12689899, -0.25, -0.1546202, -0.14142522, 0.25, -0.14142522, -0.12689899, -0.25, 0.15458106, -0.14142522, 0.25, 0.14138605, -0.111119814, -0.25, -0.16632733, -0.12689899, 0.25, -0.1546202, -0.111119814, -0.25, 0.16628815, -0.12689899, 0.25, 0.15458106, -0.094283484, -0.25, -0.17638998, -0.111119814, 0.25, -0.16632733, -0.094283484, -0.25, 0.17635082, -0.111119814, 0.25, 0.16628815, -0.0765466, -0.25, -0.18480815, -0.094283484, 0.25, -0.17638998, -0.0765466, -0.25, 0.18476899, -0.094283484, 0.25, 0.17635082, -0.058065787, -0.25, -0.19142522, -0.0765466, 0.25, -0.18480815, -0.058065787, -0.25, 0.19138606, -0.0765466, 0.25, 0.18476899, -0.03903681, -0.25, -0.19616288, -0.058065787, 0.25, -0.19142522, -0.03903681, -0.25, 0.1961237, -0.058065787, 0.25, 0.19138606, -0.01961629, -0.25, -0.1990603, -0.03903681, 0.25, -0.19616288, -0.01961629, -0.25, 0.19902115, -0.03903681, 0.25, 0.1961237, 0, -0.25, -0.2, -0.01961629, 0.25, -0.1990603, 0, -0.25, 0.2, -0.01961629, 0.25, 0.19902115, 0.01957713, -0.25, -0.1990603, 0, 0.25, -0.2, 0.01957713, -0.25, 0.19902115, 0, 0.25, 0.2, 0.03899765, -0.25, -0.19616288, 0.01957713, 0.25, -0.1990603, 0.03899765, -0.25, 0.1961237, 0.01957713, 0.25, 0.19902115, 0.058026627, -0.25, -0.19142522, 0.03899765, 0.25, -0.19616288, 0.058026627, -0.25, 0.19138606, 0.03899765, 0.25, 0.1961237, 0.076507434, -0.25, -0.18480815, 0.058026627, 0.25, -0.19142522, 0.076507434, -0.25, 0.18476899, 0.058026627, 0.25, 0.19138606, 0.094244316, -0.25, -0.17638998, 0.076507434, 0.25, -0.18480815, 0.094244316, -0.25, 0.17635082, 0.076507434, 0.25, 0.18476899, 0.11108066, -0.25, -0.16632733, 0.094244316, 0.25, -0.17638998, 0.11108066, -0.25, 0.16628815, 0.094244316, 0.25, 0.17635082, 0.12685983, -0.25, -0.1546202, 0.11108066, 0.25, -0.16632733, 0.12685983, -0.25, 0.15458106, 0.11108066, 0.25, 0.16628815, 0.14138605, -0.25, -0.14142522, 0.12685983, 0.25, -0.1546202, 0.14138605, -0.25, 0.14138605, 0.12685983, 0.25, 0.15458106, 0.15458106, -0.25, -0.12689899, 0.14138605, 0.25, -0.14142522, 0.15458106, -0.25, 0.12685983, 0.14138605, 0.25, 0.14138605, 0.16628815, -0.25, -0.111119814, 0.15458106, 0.25, -0.12689899, 0.16628815, -0.25, 0.11108066, 0.15458106, 0.25, 0.12685983, 0.17635082, -0.25, -0.094283484, 0.16628815, 0.25, -0.111119814, 0.17635082, -0.25, 0.094244316, 0.16628815, 0.25, 0.11108066, 0.18476899, -0.25, -0.0765466, 0.17635082, 0.25, -0.094283484, 0.18476899, -0.25, 0.076507434, 0.17635082, 0.25, 0.094244316, 0.19138606, -0.25, -0.058065787, 0.18476899, 0.25, -0.0765466, 0.19138606, -0.25, 0.058026627, 0.18476899, 0.25, 0.076507434, 0.1961237, -0.25, -0.03903681, 0.19138606, 0.25, -0.058065787, 0.1961237, -0.25, 0.03899765, 0.19138606, 0.25, 0.058026627, 0.19902115, -0.25, -0.01961629, 0.1961237, 0.25, -0.03903681, 0.19902115, -0.25, 0.01957713, 0.1961237, 0.25, 0.03899765, 0.2, -0.25, 0, 0.19902115, 0.25, -0.01961629, 0.19902115, 0.25, 0.01957713, 0.2, 0.25, 0)

[node name="AssemblyMachine" type="Node3D"]
script = ExtResource("1_lc1mj")
packagedBurger = ExtResource("2_xhpuh")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_6xei1")

[node name="StaticBody3D" type="StaticBody3D" parent="MeshInstance3D"]
collision_layer = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeshInstance3D/StaticBody3D"]
shape = SubResource("ConvexPolygonShape3D_lc1mj")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5448221, -0.3218752, 0)
mesh = SubResource("BoxMesh_lc1mj")

[node name="StaticBody3D" type="StaticBody3D" parent="MeshInstance3D2"]
collision_layer = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeshInstance3D2/StaticBody3D"]
shape = SubResource("ConvexPolygonShape3D_i5rei")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.4422852, -0.3218752, 0)
mesh = SubResource("BoxMesh_lc1mj")

[node name="StaticBody3D" type="StaticBody3D" parent="MeshInstance3D3"]
collision_layer = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeshInstance3D3/StaticBody3D"]
shape = SubResource("ConvexPolygonShape3D_xhpuh")

[node name="IngredientDetector" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 5
input_ray_pickable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="IngredientDetector"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5769012, 0, 0)
shape = SubResource("BoxShape3D_lc1mj")

[node name="button" type="StaticBody3D" parent="."]
collision_layer = 8
collision_mask = 0
script = ExtResource("2_i5rei")

[node name="MeshInstance3D" type="MeshInstance3D" parent="button"]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 0, 0.4091488)
mesh = SubResource("CylinderMesh_lc1mj")
surface_material_override/0 = SubResource("StandardMaterial3D_lc1mj")

[node name="CollisionShape3D" type="CollisionShape3D" parent="button"]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 0, 0.4091488)
shape = SubResource("ConvexPolygonShape3D_vdn38")

[node name="BurgerSpawn" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.6881461, 0, 0)

[node name="TempLabel" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.1673179, 0)

[connection signal="area_entered" from="IngredientDetector" to="." method="_on_item_area_entered"]
